Fixed Overflow

--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
-html, body { overflow-x: hidden; }
+* { overflow-x: hidden; }
 
 body {
   width: 100vw;
   margin: 0px;
+}
+
+div {
+  overflow-y: hidden;
 }
 
 img {
